# Now

./: .replit  README.md  ai_analyst.py  config.py  data_feed.py  engine.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  scanner.py  server.py  strategy_generator.py  strategy_store.py  stream.py
.agents/memory/: MEMORY.md  replit-path-routing.md
artifacts/trading-dashboard/: vite.config.ts
artifacts/trading-dashboard/.replit-artifact/: artifact.toml
artifacts/trading-dashboard/src/: App.tsx  index.css
artifacts/trading-dashboard/src/components/: AnalysisPanel.tsx  PerformancePanel.tsx  PriceChart.tsx  SignalBadge.tsx  SignalHistory.tsx  SignalPanel.tsx  StatusBar.tsx  SymbolTicker.tsx  TradeHistory.tsx
lib/api-spec/: openapi.yaml  package.json
lib/api-zod/src/: index.ts
static/: app.js  index.html  strategy_builder.js  style.css
strategies/: custom.py  footprint.py  patterns.py  support_resistance.py  trendlines.py
tests/: test_analysis.py  test_risk.py  test_trade_manager.py
trading/: .env.example  config.py  engine.py  main.py  requirements.txt
trading/ai/: __init__.py  trader.py
trading/analysis/: __init__.py  fibonacci.py  fundamentals.py  helpers.py  indicators.py  market_regime.py  market_structure.py  smc.py  support_resistance.py  trendlines.py  volume.py
trading/api/: __init__.py  routes.py  websocket.py
trading/context/: __init__.py  builder.py
trading/data/: __init__.py  binance_rest.py  binance_ws.py  candle_cache.py
trading/risk/: __init__.py  validator.py
trading/trade/: __init__.py  manager.py
(+4 files in other folders)
