[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.139.2",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "pandas-ta>=0.4.71b0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.51.0",
    "websockets>=16.1",
]
